# equalizer

./: .gitignore  .gitmodules  Cargo.toml  README.md
OpenWrt/: README.md  tunnel-cron.sh  tunnel.sh  vpn.sh
OpenWrt/bash (not for ash)/: cron-filler.sh  cron-tunnel.sh  cron.txt  filler.sh
Service/: equalizer.service
client-c/: CMakeLists.txt  Makefile  README.md  build-debian.sh  build.sh  deploy.sh  down.sh  env-ath79.sh  env-mipsel.sh  env-mt7621.sh  up.sh
client-c/src/: client-to-server.c  client-to-server.h  common.h  communicate.c  communicate.h  connect.c  connect.h  main.c  packet.c  packet.h  pipe.h  server-to-client.c  server-to-client.h
server/: Cargo.toml  README.md  linux.md  stream-splitter
server/src/: c_client_tests.rs  main.rs  objects.rs  orchestrator.rs  tests.rs
server/src/core/: filler.rs  mod.rs  throttler.rs  vpn_proxy.rs
server/src/entry/: client_stream_split.rs  entry_point.rs  mod.rs
server/src/speed/: mod.rs  modify_collected_info.rs  packets_logging.rs  speed_calculation.rs  speed_correction.rs
server/src/statistic/: mod.rs
src/: const.rs  entry_point.rs  filler.rs  instance_lifecycle.rs  main.rs  objects.rs  orchestrator.rs  packet.rs  speed.rs  speed_correction.rs  statistic.rs  tests.rs  throttler.rs  vpn_proxy.rs
src/core/: filler.rs  mod.rs  vpn_proxy.rs
src/entry/: entry_point.rs
src/speed/: mod.rs
src/statistic/: mod.rs
stream-splitter/: Cargo.toml  README.md
stream-splitter/src/: client_side_split.rs  lib.rs  packet.rs  server_side_split.rs  server_side_vpn_stream.rs  tests.rs
stream-wrapper/: Cargo.toml  README.md
stream-wrapper/src/: client_side_split.rs  lib.rs  packet.rs  server_side_split.rs  tests.rs
