[package]
name = "equalizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
simplelog = "0.12.2"

[dev-dependencies]
rand = "0.9.0-alpha.2"
time = { version = "0.3", features = ["macros"] }