[package]
name = "equalizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
simplelog = "0.12.2"
# ln -sr ../stream-splitter stream-splitter
# https://stackoverflow.com/questions/66951308/how-to-specify-the-path-to-a-dependency-located-in-my-home-directory-in-cargo-to
splitter = { path = "stream-splitter"}

[dev-dependencies]
rand = "0.9.0-alpha.2"
serial_test = "3.1.1"
time = { version = "0.3", features = ["macros"] }
